# UniGSC

./: .gitignore  LICENSE  README.md  gs_pipeline.py  pyproject.toml  requirements.txt  setup.py
configs/ffmpeg/anchor_0.0/: rp01.yaml  rp02.yaml  rp03.yaml  rp04.yaml
configs/ffmpeg/anchor_0.0_10bit/: rp01.yaml  rp02.yaml  rp03.yaml  rp04.yaml
configs/hm/anchor_0.0_10bit/: rp01.yaml  rp02.yaml  rp03.yaml  rp04.yaml
datasets/: INVR.py  INVR_N3D.py  colmap.py
docs/: install_codec.md
gsc/: __init__.py  config.py  log.py  runner.py
gsc/codec/: __init__.py  pcc_codec.py  vgsc_codec.py  video_codec.py
gsc/map/: __init__.py  gs_map.py
gsc/pre_post_process/: pca.py  prune.py  transform.py
gsc/quantize/: __init__.py  gs_quantize.py
gsc/utils/: color.py  file.py  gs_io.py  gs_math.py  plot.py  yuv_io.py
scripts/: benchmark.sh  benchmark_gsc_static_with_configs.sh  benchmark_with_1_config.sh  benchmark_with_configs.sh  codec.sh  codec_with_1_ply_dir_configs.sh  decode.sh  decode_and_eval_with_configs.sh  decode_with_configs.sh  encode.sh  encode_with_configs.sh  eval.sh  eval_with_1_ply_dir.sh  eval_with_1_result_dir.sh  eval_with_result_dirs.sh  render.sh  render_with_1_ply_dir.sh  versatile_benchmark.sh  versatile_codec.sh
scripts/mpeg/: 1f_mandatory_benchmark.sh  1f_mandatory_render.sh  1f_optional_benchmark.sh  1f_optional_render.sh  main_benchmark.sh  main_render.sh
utils/file/: file_collector.py
utils/mpeg/: QMIV  gsc_metric.py
utils/plot/: plot_rd_curve.py
utils/summary/: RD_stats_to_csv.py  summarize_stats.py
(+44 files in other folders)
